k8s/django-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      component: app

  template:
    metadata:
      labels:
        component: app

    spec:
      containers:
        - name: app
          image: farhansajid2/django-app-k8s
          ports:
            - containerPort: 8990
          args: [
  				"gunicorn",
  				"-w",
  				"4",
  				"-b",
  				"0.0.0.0:8990",
  				"django_project.wsgi",
  				"--env",
  				"DJANGO_SETTINGS_MODULE=django_project.settings.production"

			]
